<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="edu.wcu.cs.eliteraretrader.RouteTo"
    android:orientation="vertical"
    android:weightSum="10">

    <Button
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:text="@string/common_choose"
        android:id="@+id/loop_start_list"
        android:layout_gravity="center_horizontal"
        android:layout_weight="1" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:id="@+id/loop_start"
        android:layout_gravity="center_horizontal"
        android:layout_weight="1"
        android:clickable="false"
        android:enabled="true"
        android:hint="@string/common_start" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:text="@string/loop_choose"
        android:id="@+id/loop_end_list"
        android:layout_gravity="center_horizontal"
        android:layout_weight="1" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:id="@+id/loop_end"
        android:layout_gravity="center_horizontal"
        android:layout_weight="1"
        android:hint="@string/loop_end"
        android:clickable="false" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:inputType="number"
        android:ems="10"
        android:id="@+id/loop_legs"
        android:layout_gravity="center_horizontal"
        android:layout_weight="1"
        android:hint="@string/loop_legs" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:inputType="number"
        android:ems="10"
        android:id="@+id/loop_cargo"
        android:layout_gravity="center_horizontal"
        android:layout_weight="1"
        android:hint="@string/common_cargo" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_weight="1" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:text="@string/common_half"
        android:id="@+id/loop_half_explination"
        android:layout_gravity="center_horizontal"
        android:layout_weight="2" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="center_horizontal"
        android:layout_weight="1"
        android:weightSum="2">

        <CheckBox
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/common_half_option"
            android:id="@+id/loop_half"
            android:layout_weight="1" />

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/common_calc"
            android:id="@+id/loop_go"
            android:layout_weight="1" />
    </LinearLayout>
</LinearLayout>
