<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="edu.wcu.cs.eliteraretrader.RouteTo"
    android:orientation="vertical"
    android:weightSum="10">

    <Button
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:text="@string/common_start"
        android:id="@+id/single_list"
        android:layout_gravity="center_horizontal"
        android:layout_weight="1" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:id="@+id/single_start"
        android:layout_gravity="center_horizontal"
        android:layout_weight="1"
        android:clickable="false"
        android:enabled="true"
        android:hint="@string/common_start" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:id="@+id/single_end"
        android:layout_gravity="center_horizontal"
        android:layout_weight="1"
        android:hint="@string/single_end" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:text="@string/single_location"
        android:id="@+id/location"
        android:layout_weight="1"
        android:longClickable="true"
        android:textSize="16dp" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="center_horizontal"
        android:layout_weight="2"
        android:weightSum="3">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:weightSum="2">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:inputType="number"
                android:ems="10"
                android:id="@+id/xval"
                android:layout_weight="1"
                android:hint="@string/single_x" />
        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:weightSum="2">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:inputType="number"
                android:ems="10"
                android:id="@+id/yval"
                android:hint="@string/single_y"
                android:layout_weight="1" />
        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:weightSum="2">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:inputType="number"
                android:ems="10"
                android:id="@+id/zval"
                android:layout_weight="1"
                android:hint="@string/single_z" />
        </LinearLayout>

    </LinearLayout>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:inputType="number"
        android:ems="10"
        android:id="@+id/single_cargo"
        android:layout_weight="1"
        android:hint="@string/common_cargo" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:text="@string/common_half"
        android:id="@+id/single_halfexplination"
        android:layout_gravity="center_horizontal"
        android:layout_weight="2"
        android:textSize="16dp" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="center_horizontal"
        android:layout_weight="1"
        android:weightSum="2">

        <CheckBox
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/common_half_option"
            android:id="@+id/single_half"
            android:layout_weight="1" />

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/common_calc"
            android:id="@+id/single_go"
            android:layout_weight="1"
            android:longClickable="false" />
    </LinearLayout>

</LinearLayout>
