<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="edu.wcu.cs.eliteraretrader.Main"
    android:weightSum="10"
    android:orientation="vertical">

    <Button
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:id="@+id/one_dir"
        android:layout_gravity="center_horizontal"
        android:layout_weight="2"
        android:text="@string/main_onewayButton" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:text="@string/main_tradeButton"
        android:id="@+id/mult_dir"
        android:layout_gravity="center_horizontal"
        android:layout_weight="2" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="center_horizontal"
        android:layout_weight="1" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:text="@string/main_explination"
        android:id="@+id/explination"
        android:layout_gravity="center_horizontal"
        android:layout_weight="4"
        android:textSize="16dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:text="@string/main_permits"
        android:id="@+id/permits"
        android:layout_gravity="center_horizontal"
        android:layout_weight="1" />

</LinearLayout>
