<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="edu.wcu.cs.eliteraretrader.PermitActivity"
    android:orientation="vertical"
    android:weightSum="10">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:text="@string/permits_explination"
        android:id="@+id/explination_permit"
        android:layout_gravity="center_horizontal"
        android:textSize="16dp"
        android:layout_weight="3" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="center_horizontal"
        android:layout_weight="1" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:id="@+id/shinrarta"
        android:text="@string/permits_shinrarta"
        android:textSize="16dp"
        android:layout_weight="1" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:text="@string/permits_vega"
        android:id="@+id/vega"
        android:layout_weight="1" />

</LinearLayout>
